namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: v1
kind: Namespace
metadata:
  name: luka

---
apiVersion: v1
kind: Namespace
metadata:
  name: test
