ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /metrics
    prometheus.io/port:   '80'
spec:
  rules:
    - host: k8st1-grafana.ko.seznam.cz
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /

    - host: k8st1-prometheus.ko.seznam.cz
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
